outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval6501379036834961828_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance and adjusting proximity weight to balance exploration and exploitation, creating a more destination-focused tour construction strategy.}
                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance and adjusting proximity weight to balance exploration and exploitation, creating a more destination-focused tour construction strategy.}
                                                                                                                                                      ^
SyntaxError: unmatched '}'
